# DreamEngine3

./: CMakeLists.txt  Makefile  README.md  data_structure.md  log.txt  test  test.cpp
examples/OggyPokerGame/: CMakeLists.txt
examples/OggyPokerGame/include/: ai_service.h  card_service.h  game.h  game_service.h  hand_service.h  menu_service.h  money_screen.h  number_selector.h  player.h  poker_service.h  system.h  text_service.h  variables.h
examples/OggyPokerGame/src/: game.cpp  game_service.cpp  main.cpp  menu_service.cpp  money_screen.cpp  number_selector.cpp  system.cpp  text_service.cpp
examples/Pong/: CMakeLists.txt
examples/Pong/include/: game.h
examples/Pong/src/: game.cpp  main.cpp
examples/SpaceInvaders/: CMakeLists.txt
examples/SpaceInvaders/include/: game.h
examples/SpaceInvaders/resources/: spaceShip.afphoto
examples/SpaceInvaders/src/: game.cpp  main.cpp  player.cpp
include/: dream_collections.h  dream_gamepad.h  dream_graphics.h  dream_log.h  dream_main.h  dream_sound.h  dream_text.h  dream_variables.h  list.h
src/: CMakeLists.txt  dream_gamepad.cpp  dream_graphics.cpp  dream_main.cpp  dream_sound.cpp  dream_text.cpp
